--- a/src/app/work/era-items/crowdskout/crowdskout.component.html
+++ b/src/app/work/era-items/crowdskout/crowdskout.component.html
@@ -78,13 +78,13 @@
 
   <section class="work-section">
     <h2 class="work-body-h2">
-      Building a System with D3 and AmCharts
+      Building a System with D3 and amCharts
     </h2>
     <p>
       One of my roles was to research and build the foundations of Crowdskout's data visualization system. I designed it so that a novice user could quickly learn and operate it and deliver complex visualizations without dedicated training.
     </p>
     <p>
-      We built the system using a mix of <a class="basic-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="basic-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3.
+      I built the system using a mix of <a class="basic-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="basic-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3.
     </p>
     <p>
       Using a multi-step editor, a user could select an audience segment, criteria, and a graph type, and create a graph that could be customized or exported in a variety of ways.
