--- a/src/app/work/era-items/crowdskout/crowdskout.component.html
+++ b/src/app/work/era-items/crowdskout/crowdskout.component.html
@@ -81,10 +81,7 @@
       Building a System with D3 and amCharts
     </h2>
     <p>
-      One of my roles was to research and build the foundations of Crowdskout's data visualization system. I designed it so that a novice user could quickly learn and operate it and deliver complex visualizations without dedicated training.
-    </p>
-    <p>
-      I built the system using a mix of <a class="basic-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="basic-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3.
+      One of my roles was to research and build the foundations of Crowdskout's data visualization system. I designed it so that a novice user could quickly learn and operate it and deliver complex visualizations without dedicated training. I built the system using a mix of <a class="basic-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="basic-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3.
     </p>
     <p>
       Using a multi-step editor, a user could select an audience segment, criteria, and a graph type, and create a graph that could be customized or exported in a variety of ways.
@@ -101,21 +98,6 @@
       </lightgallery> 
     </div>
   </section>
-
-
-<!--     <div class="grid-main">
-      <div class="era-detail-item"
-         *ngFor="let work of filteredWorks; index as i;"
-         routerLink="/work/{{work.url}}">
-        <div class="era-detail-item-image-wrapper">
-          <img class="era-detail-item-image"
-             src="../assets/images/work/thumbnails/{{work.url}}.png"
-             alt="{{work.display}}">
-        </div>
-        <div class="era-detail-item-title">{{work.display}}</div>
-        <div class="era-detail-item-subtitle">{{work.subtitle}}</div>
-      </div>
-    </div> -->
 
   </div>
 </article>
