--- a/src/app/work/era-items/crowdskout/crowdskout.component.html
+++ b/src/app/work/era-items/crowdskout/crowdskout.component.html
@@ -18,7 +18,7 @@
         User Profiles and Data Fields
       </h3>
       <p>
-        One core feature I worked on was Crowdskout's user profiles and field management. As an advocacy CRM, Crowdskout tracked hundreds of possible data fields on our user profiles that could be used to track and assess voting populations.
+        One core feature I worked on was Crowdskout's user profile and included fields. As an advocacy CRM, Crowdskout provided hundreds of possible data fields on our user profiles that could be used to evaluate and sort voting populations.
       </p>
 
       <div class="gallery-subsection">
@@ -78,7 +78,7 @@
 
   <section class="work-section">
     <h2 class="work-body-h2">
-      Building a System with D3 and amCharts
+      Building Data Visualizations with D3 and amCharts
     </h2>
     <p>
       One of my roles was to research and build the foundations of Crowdskout's data visualization system. I designed it so that a novice user could quickly learn and operate it and deliver complex visualizations without dedicated training. I built the system using a mix of <a class="basic-link" target="_blank" href="https://d3js.org/">D3</a> and a library called <a class="basic-link" target="_blank" href="https://www.amcharts.com/">amCharts</a>, also built on D3.
