--- a/src/app/work/era-items/fleishman/fleishman.component.html
+++ b/src/app/work/era-items/fleishman/fleishman.component.html
@@ -33,7 +33,7 @@
         Reducing Texting While Driving with AT&T & Werner Herzog
       </h2>
       <p>
-        At FleishmanHillard, we grew AT&T's sustainability campaign against texting while driving, called "It Can Wait," to record success. This was an initiative that came out of our offices, and as it reached its heights, we collaborated with our sibling company, <a class="basic-link" target="_blank" href="https://www.bbdo.nyc/">BBDO New York</a>, and writer/director <a class="basic-link" target="_blank" href="https://www.wernerherzog.com/">Werner Herzog</a>, to produce a branded documentary around it. The film, "From One Second to the Next," was tweeted over 150,000 times and shown in over 40,000 high schools after it was produced, and it helped AT&T Sustainability have its <a class="basic-link" target="_blank" href="https://www.latimes.com/entertainment/envelope/cotown/la-et-ct-werner-herzog-texting-documentary-20130816-story.html">biggest year in media to date</a>.
+        At FleishmanHillard, we grew AT&T's sustainability campaign against texting while driving, called "It Can Wait," to record success. This was an initiative that came out of our offices, and as it reached its heights, we collaborated with our sibling company, <a class="basic-link" target="_blank" href="https://www.bbdo.nyc/">BBDO New York</a>, and writer/director <a class="basic-link" target="_blank" href="https://www.wernerherzog.com/">Werner Herzog</a>, to produce a branded documentary around it. The film, "From One Second to the Next," was tweeted over 150,000 times and shown in over 40,000 high schools after it was produced, and it helped AT&T Sustainability have one of its <a class="basic-link" target="_blank" href="https://www.latimes.com/entertainment/envelope/cotown/la-et-ct-werner-herzog-texting-documentary-20130816-story.html">biggest years in media to date</a>.
       </p>
       <div class="video-height-wrapper">
         <div class="work-body-youtube-video work-video-embed">
@@ -52,7 +52,7 @@
         Robert Wood Johnson Foundation & Easter Seals Online
       </h2>
       <p>
-        We developed and managed online communications for many philanthropic organizations and non-profits. I supported Robert Wood Johnson Foundation and Easterseals both for a number of years. When RWJF contributed funding to the Center for Health and Health Care in Schools, we developed websites and content for them, where I contributed content audits, web design, and heuristic review. With Easterseals, we worked with their North Carolina branch contributing web and motion design.
+        When RWJF contributed funding to the Center for Health and Health Care in Schools, we developed websites for them to advocate for their mission, where I contributed content audits, heuristic review, and web design. With Easterseals, we worked with their North Carolina branch contributing web and motion design to spotlight their disability and community services.
       </p>
 
       <div class="gallery-subsection">
